--- a/app/coursify-ai/my_templates/ai.html
+++ b/app/coursify-ai/my_templates/ai.html
@@ -6,7 +6,7 @@
     <title>AI Chatbot</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='style2.css') }}"
+      href="{{ url_for('static', filename='styleChatbot.css') }}"
     />
   </head>
   <body>
@@ -22,16 +22,16 @@
       <nav class="navbar">
         <a href="{{ url_for('index') }}" id="home">HOME</a>
         <a href="{{ url_for('my_content') }}" id="content">MY CONTENT</a>
-        <a href="{{ url_for('ai_html') }}" id="ai">AI ASSISTANT</a>
+        <a href="{{ url_for('ai_html') }}" id="ainav">AI ASSISTANT</a>
         <a href="{{ url_for('reviews') }}">REVIEW</a>
         <a href="settings.html" id="settings">SETTINGS</a>
         <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
       </nav>
       <i class="bx bx-menu"></i>
     </header>
-
     <div class="container">
       <div class="sidebar">
+        <h1> AI Chatbot</h1>
         <a href="{{ url_for('ai_html') }}" id="ai-assistant">AI ASSISTANT</a>
         <a href="{{ url_for('faq') }}">FAQs</a>
       </div>
