--- a/app/coursify-ai/my_templates/faq.html
+++ b/app/coursify-ai/my_templates/faq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQs</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style2.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styleChatbot.css') }}">
 </head>
 <body>
 
@@ -17,17 +17,19 @@
         <nav class="navbar">
             <a href="{{ url_for('index') }}" id="home">HOME</a>
             <a href="{{ url_for('my_content') }}" id="content">MY CONTENT</a>
+            <a href="{{ url_for('ai_html') }}" id="ainav">AI ASSISTANT</a>
+            <a href="{{ url_for('reviews') }}">REVIEW</a>
             <a href="settings.html" id="settings">SETTINGS</a>
-            <a href="ai.html" id="ai-assistant">AI ASSISTANT</a>
-            <a href="#" id="logout">LOGOUT</a>
-          </nav>
+            <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
+        </nav>
         <i class='bx bx-menu'></i>
     </header>
 
     <div class="container">
         <div class="sidebar">
-            <a href="ai.html" id="ai-assistant">AI ASSISTANT</a>
-            <a href="{{ url_for('faq') }}">FAQs</a>
+            <h1> AI Chatbot</h1>
+            <a href="ai.html" >AI ASSISTANT</a>
+            <a href="{{ url_for('faq') }}"id="ai-faq">FAQs</a>
         </div>
         <div id="chat-container">
             <div class="faq-section">
