More UI changes to the AI assistant page

--- a/app/coursify-ai/my_templates/ai.html
+++ b/app/coursify-ai/my_templates/ai.html
@@ -34,6 +34,20 @@
         <h1> AI Chatbot</h1>
         <a href="{{ url_for('ai_html') }}" id="ai-assistant">AI ASSISTANT</a>
         <a href="{{ url_for('faq') }}">FAQs</a>
+        <div id="cbdesc">
+          <h3> Welcome to the Coursify Chatbot!</h3>
+          <p id="cbpara">This virtual assistant is here to help you navigate our website and make the most of your Courisify.ai experience.</p>
+
+          <p id="cblist">Here's how I can assist you:</p>
+          <ul>
+            <li><strong>Generating Custom Content:</strong><br> Get step-by-step guidance on creating content tailored to your needs.
+            </li>
+            <li><strong>Account Management:</strong><br> Learn how to update your profile, change your password, and more.</li>
+            <li><strong>Troubleshooting:</strong><br> Receive help with any issues or challenges you face on the website.</li>
+            <li><strong>FAQs:</strong><br> Access frequently asked questions for quick answers to common queries.</li>
+          </ul>
+          <h4> Ask me something &#x263a </h5>
+        </div>
       </div>
       <div id="chat-container">
         <div id="chat-box"></div>
