maedia queries added to my content, ai assitant, and settings page

--- a/app/coursify-ai/my_templates/Settings.html
+++ b/app/coursify-ai/my_templates/Settings.html
@@ -236,5 +236,6 @@
 
     <!-------------------------------------END of SCRIPT------------------------------------------------------------------------------->
     <!--------------------------------------------------------------------------------------------------------------------------------->
+    <footer id="footer">&copy; 2023 CoursifyAI. All rights reserved.</footer>
   </body>
 </html>
