--- a/app/coursify-ai/my_templates/ai.html
+++ b/app/coursify-ai/my_templates/ai.html
@@ -169,5 +169,6 @@
           clearChatHistory();
         });
     </script>
+    <footer id="footer">&copy; 2023 CoursifyAI. All rights reserved.</footer>
   </body>
 </html>
