--- a/app/coursify-ai/my_templates/Settings.html
+++ b/app/coursify-ai/my_templates/Settings.html
@@ -30,7 +30,7 @@
           <a href="{{ url_for('my_content') }}" id = "content">MY CONTENT</a>
           <a href="ai.html" id = "ai">AI ASSISTANT</a>
           <a href="{{ url_for('reviews') }}">REVIEW</a>
-          <a href="settings.html" id = "settings">SETTINGS</a>
+          <a href="settings.html" id = "settingsnav">SETTINGS</a>
           <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
         </nav>
       </div>
