--- a/app/coursify-ai/my_templates/forgot_password.html
+++ b/app/coursify-ai/my_templates/forgot_password.html
@@ -19,32 +19,19 @@
         <!-- <div class="row justify-content-center align-items-center vh-100">-->
             <div class="col-md-6">
                 <!--<div class="form-container bg-white p-4 rounded shadow-sm">-->
-                    <h2 class="text-center-L">LOGIN</h2>
-                    <form id="login-form" method="POST" action="/login">
+                    <h2 class="text-center-L">Forgot Password</h2>
+                    <form id="forgotpw-form" method="POST" action="/forgot_password">
                         <div class="form-group">
                             <label for="email">Email:</label>
                             <input type="email" id="email" name="email" class="form-control" required>
                         </div>
-                        <div class="form-group">
-                            <label for="password">Password:</label>
-                            <input type="password" id="password" name="password" class="form-control" required>
-                        </div>
-                        <div class="form-group form-check">
-                            <input type="checkbox" class="form-check-input" id="remember" name="remember">
-                            <label class="form-check-label" for="remember">Remember Me</label>
+                        <div>
+                            <p> We'll send you a link to reset your password. </p>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Login" class="btn btn-primary btn-block">
-                        </div>
-                        <div id="fpw">
-                            <!-- <a href="">Forgot your password ?</a> -->
-                            <a id="fpw" href="{{ url_for('forgot_password') }}" style="color: black !important; text-decoration: none !important;">Forgot password?</a>
+                            <input type="submit" value="Reset Password" class="btn btn-primary btn-block">
                         </div>
                     </form>
-                    <div class="mt-4 text-center">
-                        <p>Not a member?</p>
-                        <a href="{{ url_for('register') }}" class="btn btn-secondary">Sign Up</a>
-                    </div>
                 <!--</div>-->
             </div>
         <!--</div> -->
