testing for forgot_password function

--- a/app/coursify-ai/my_templates/login.html
+++ b/app/coursify-ai/my_templates/login.html
@@ -46,7 +46,7 @@
                         </div>
                         <div id="fpw">
                             <!-- <a href="">Forgot your password ?</a> -->
-                            <a id="fpw" href="{{ url_for('forgot_password') }}" style="color: black !important; text-decoration: none !important;">Forgot password?</a>
+                            <a id="fpwlink" href="{{ url_for('forgot_password') }}" style="color: black !important; text-decoration: none !important;">Forgot password?</a>
                         </div>
                     </form>
                     <div class="mt-4 text-center">
