--- a/app/coursify-ai/my_templates/forgot_password.html
+++ b/app/coursify-ai/my_templates/forgot_password.html
@@ -38,7 +38,7 @@
                             <p> We'll send you a link to reset your password. </p>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Reset Password" class="btn btn-primary btn-block">
+                            <input id="resetpw_btn" type="submit" value="Reset Password" class="btn btn-primary btn-block">
                         </div>
                     </form>
                 <!--</div>-->
