--- a/app/coursify-ai/my_templates/reset_password.html
+++ b/app/coursify-ai/my_templates/reset_password.html
@@ -46,7 +46,7 @@
                     <p> We'll send you a link to reset your password. </p>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Reset Password" class="btn btn-primary btn-block">
+                    <input id="respw_btn"type="submit" value="Reset Password" class="btn btn-primary btn-block">
                 </div>
             </form>
             <!--</div>-->
