--- a/app/coursify-ai/my_templates/email_verification.html
+++ b/app/coursify-ai/my_templates/email_verification.html
@@ -1,36 +1,32 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verify Your Email</title>
-    <style>
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            text-align: center;
-            text-decoration: none;
-            outline: none;
-            color: #fff;
-            background-color: #4CAF50;
-            border: none;
-            border-radius: 15px;
-            box-shadow: 0 9px #999;
-        }
-        .button:hover {background-color: #3e8e41}
-        .button:active {
-            background-color: #3e8e41;
-            box-shadow: 0 5px #666;
-            transform: translateY(4px);
-        }
-    </style>
+    <title>Email Verification - Coursify.ai</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">   
+    <!-- Replace with actual stylesheet path -->
+    <link rel="stylesheet" type="text/css" href="styleLogin.css"> 
 </head>
-<body>
-    <h1>Welcome to Coursify!</h1>
-    <p>Please click the button below to verify your email address:</p>
-    <a href="{{ confirm_url }}" class="button">Verify Email</a>
+<body style="background: #f5f5f5;"> <!-- Changed for email context, variable removed -->
+    <div class="container">
+        <div class="row justify-content-center align-items-center vh-100">
+            <div class="col-md-6">
+                <div class="form-container bg-white p-4 rounded shadow-sm">
+                    <h2 class="text-center">Verify Your Email</h2>
+                    <p class="text-center">Please click the button below to verify your email address and activate your account.</p>
+                    <div class="text-center">
+                        <!-- Confirmation URL dynamically set by your Flask application -->
+                        <a href="{{ confirm_url }}" class="btn btn-primary btn-block">Verify Email</a>
+                    </div>
+                    <p class="text-center mt-3">If you did not request this verification, no further action is required.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
--->
