Overflow fixed for pptx

--- a/app/coursify-ai/my_templates/content.html
+++ b/app/coursify-ai/my_templates/content.html
@@ -230,6 +230,10 @@
         };
       }
 
+      /**
+       * Show the share form with the specified file ID
+       * @param {string} fileId - The ID of the file to share
+       */
       function showForm(fileId) {
         // Show the form
         document.getElementById("shareForm").style.display = "block";
@@ -237,6 +241,10 @@
         // Set the file's ID in the form
         document.getElementById("fileId").value = fileId;
       }
+      /**
+       * Generate a quiz for the specified file ID
+       * @param {string} fileId - The ID of the file to generate a quiz for
+       */
       function generateQuiz(fileId) {
         fetch(`/generate_quiz/${fileId}`)
           .then((response) => response.json())
@@ -253,6 +261,11 @@
           })
           .catch((error) => console.error("Error generating quiz:", error));
       }
+ 
+       /**
+        * 
+        * @param {string} fileId - The ID of the file to generate a quiz for
+        */
       window.onload = function () {
         var noteCards = document.getElementsByClassName("note-card");
 
@@ -301,6 +314,10 @@
         // Assuming 'showDetails' function is updated to include generating and attaching 'Generate Quiz' button as discussed earlier.
 
         // Function to handle Quiz Generation
+        /**
+         *  Generate a quiz for the specified file ID
+         * @param {string} fileId - The ID of the file to generate a quiz for
+         */
         function handleQuizGeneration(fileId) {
           var generateQuizButton = document.querySelector(
             ".generate-quiz-link"
