--- a/app/coursify-ai/my_templates/register.html
+++ b/app/coursify-ai/my_templates/register.html
@@ -40,7 +40,7 @@
                         <div class="form-group">
                             <label for="password">Password:</label>
                             <input type="password" id="password" name="password" class="form-control" required>
-                             <small id="passwordHelp" class="form-text">Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.</small> 
+                             <small id="passwordHelp" class="form-text">Your password must be 8-20 characters long, contain at least one letter, number, and special character but must not contain spaces or emoji.</small> 
                            <!---- <span class="input-message" id="pwMessage" style="display: none;">Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.</span>-->
                         </div>
                         <div class="form-group">
