quiz generation frontend and backend implemented- done by dhairya and gurbir

--- a/app/coursify-ai/my_templates/index.html
+++ b/app/coursify-ai/my_templates/index.html
@@ -23,6 +23,7 @@
           <div class="link_container">
             <nav class="navbar">
               <a href="{{ url_for('index') }}" id="homenav">HOME</a>
+              <a href="{{ url_for('quiz_generate') }}" id="quiz">QUIZ</a>
               <a href="{{ url_for('my_content') }}" id="content">MY CONTENT</a>
               <a href="ai.html" id="ai">AI ASSISTANT</a>
               <a href="{{ url_for('reviews') }}" id="reviews">REVIEW</a>
