--- a/app/coursify-ai/my_templates/content.html
+++ b/app/coursify-ai/my_templates/content.html
@@ -38,12 +38,15 @@
 
       <nav class="navbar">
         <div id="sidebar">
-          <a href="{{ url_for('index') }}" id="home">HOME</a>
-          <a href="{{ url_for('my_content') }}" id="contentnav">MY CONTENT</a>
-          <a href="ai.html" id="ai">AI ASSISTANT</a>
-          <a href="{{ url_for('reviews') }}">REVIEW</a>
-          <a href="settings.html" id="settings">SETTINGS</a>
-          <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
+         
+            <a href="{{ url_for('index') }}" id="homenav">HOME</a>
+            <a href="{{ url_for('quiz_generate') }}" id="quiz">QUIZ</a>
+            <a href="{{ url_for('my_content') }}" id="content">MY CONTENT</a>
+            <a href="ai.html" id="ai">AI ASSISTANT</a>
+            <a href="{{ url_for('reviews') }}" id="reviews">REVIEW</a>
+            <a href="settings.html" id="settings">SETTINGS</a>
+            <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
+          
         </div>
       </nav>
       <i class="bx bx-menu"></i>
