--- a/app/coursify-ai/my_templates/settings.html
+++ b/app/coursify-ai/my_templates/settings.html
@@ -27,6 +27,7 @@
       <div class="link_container">
         <nav class="navbar">
           <a href="{{ url_for('index') }}" id = "home">HOME</a>
+          <a href="{{ url_for('quiz_generate') }}" id="quiz">QUIZ</a>
           <a href="{{ url_for('my_content') }}" id = "content">MY CONTENT</a>
           <a href="ai.html" id = "ai">AI ASSISTANT</a>
           <a href="{{ url_for('reviews') }}">REVIEW</a>
