--- a/app/coursify-ai/my_templates/quiz.html
+++ b/app/coursify-ai/my_templates/quiz.html
@@ -39,12 +39,12 @@
         <!--home section-->
         <section class="home" id="home">
             <div class="left">
-                <h1 id ="head">Welcome to Coursify.ai</h1>
+                <h1 id ="head">Automated Quiz Generation</h1>
                 <!-- <h2>As an educator, you are forced to make slides you dont want to.<br />
                   Don't worry, we will make them for you.</h2> -->
-                <h2>We understand the challenges of preparing educational materials.<br />
+                <!-- <h2>We understand the challenges of preparing educational materials.<br />
                   Let us take the burden off your shoulders by crafting
-                  engaging slides for you.</h2>
+                  engaging slides for you.</h2> -->
                 
             </div>
             <div class="right">
