--- a/src/coursify-ai/my_templates/content.html
+++ b/src/coursify-ai/my_templates/content.html
@@ -182,7 +182,7 @@
     <!-- Share Form -->
     <div id="shareForm" style="display: none">
       <i class='bx bx-arrow-back' id="closeForm"></i>
-      <form action="{{ url_for('share_via_email') }}" method="post">
+        <form action="{{ url_for('share_file', file_id='') }}" method="post">
         <input type="hidden" id="fileId" name="file_id" />
         <label for="email">Recipient's Email:</label>
         <input type="email" id="email" name="email" required />
