--- a/src/coursify-ai/my_templates/preview.html
+++ b/src/coursify-ai/my_templates/preview.html
@@ -66,7 +66,7 @@
           } else if (fileType === "pptx") {
             urlPath = `presentation/${encodedFilename}`; // Adjusted to fetch from presentations directory
           }
-          const fullUrl = `http://127.0.0.1:5000/${urlPath}`;
+            const fullUrl = `/${urlPath}`;
           if (fileType === "pdf") {
             renderPDFOnCanvas(fullUrl);
           } else if (fileType === "pptx") {
