--- a/src/coursify-ai/my_templates/ai.html
+++ b/src/coursify-ai/my_templates/ai.html
@@ -25,7 +25,7 @@
         <a href="{{ url_for('my_content') }}" id="content">MY CONTENT</a>
         <a href="ai.html" id="ai">AI ASSISTANT</a>
         <a href="{{ url_for('reviews') }}" id="reviews">REVIEW</a>
-        <a href="settings.html" id="settings">SETTINGS</a>
+        <a href="{{ url_for('settings') }}" id="settings">SETTINGS</a>
         <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
       </nav>
       <i class="bx bx-menu"></i>
