--- a/src/coursify-ai/my_templates/settings.html
+++ b/src/coursify-ai/my_templates/settings.html
@@ -26,13 +26,13 @@
       <!-- Rest of the header -->
       <div class="link_container">
         <nav class="navbar">
-          <a href="{{ url_for('index') }}" id = "home">HOME</a>
-          <a href="{{ url_for('quiz_generate') }}" id="quiz">QUIZ</a>
-          <a href="{{ url_for('my_content') }}" id = "content">MY CONTENT</a>
-          <a href="ai.html" id = "ai">AI ASSISTANT</a>
-          <a href="{{ url_for('reviews') }}">REVIEW</a>
-          <a href="settings.html" id = "settingsnav">SETTINGS</a>
-          <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
+            <a href="{{ url_for('index') }}" id="homenav">HOME</a>
+            <a href="{{ url_for('quiz_generate') }}" id="quiz">QUIZ</a>
+            <a href="{{ url_for('my_content') }}" id="content">MY CONTENT</a>
+            <a href="ai.html" id="ai">AI ASSISTANT</a>
+            <a href="{{ url_for('reviews') }}" id="reviews">REVIEW</a>
+            <a href="{{ url_for('settings') }}" id="settings">SETTINGS</a>
+            <a href="{{ url_for('logout') }}" id="logout">LOGOUT</a>
         </nav>
       </div>
     </header>
